refactor: cope with named export changes

--- a/packages/unmutable-docs/src/docs/api/before.mdx
+++ b/packages/unmutable-docs/src/docs/api/before.mdx
@@ -6,10 +6,8 @@ This page is still being written so watch out!
 
 ## Imports
 
-All functions can be imported from `unmutable/<functionName>`
-
 ```js
-import getIn from 'unmutable/getIn';
-import map from 'unmutable/map';
-import filter from 'unmutable/filter';
+import {getIn} from 'unmutable';
+import {map} from 'unmutable';
+import {filter} from 'unmutable';
 ```
