docs: better docs

--- a/packages/unmutable-docs/src/mdx/description2.mdx
+++ b/packages/unmutable-docs/src/mdx/description2.mdx
@@ -1,10 +1,4 @@
-# API
-
-This page is still being written so watch out!
-
-**WATCH OUT!!!**
-
-## Imports
+## API Documentation
 
 All functions can be imported from `unmutable/<functionName>`
 
